<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/black" >

    <TextView
        android:id="@+id/titleLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/versionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/titleLabel"
        android:layout_centerHorizontal="true"
        android:text="@string/verison"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/lightgrey" />

    <TextView
        android:id="@+id/creditsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/credits"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/versionLabel"
        android:layout_alignEnd="@+id/titleLabel" />

    <TextView
        android:id="@+id/waitingLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/waiting"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textColor="@color/white"
        android:layout_below="@+id/waitingProgressBar"
        android:layout_centerHorizontal="true" />

    <ProgressBar
        android:id="@+id/waitingProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logoImage"
        android:layout_centerHorizontal="true" />

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/versionLabel"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="14dp"
        android:contentDescription="@string/logoAlt"
        android:src="@drawable/background" />

</RelativeLayout>
